--- a/support.html
+++ b/support.html
@@ -11,7 +11,8 @@
 
     <title>Digital Agency</title>
     <link rel="stylesheet" type="text/css" href="assets/css/support.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="shortcut icon" href="assets/img/Group.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,61 +62,69 @@
             <p>Build an incredible workplace and grow your business with Gusto’s <br>all-in-one platform with amazing
                 contents.</p>
         </div>
-        <div class="container">
-            <div class="col">
-                <img src="assets/img/Asset-4-2.png" alt="#">
-                <div class="details-col">
-                    <h1>Emmalee Mclain</h1>
-                    <p>Product Designer</p>
-                    <div class="icons">
-                        <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
-                        <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
-                        <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
+        <div class="swiper">
+            <div class="container swiper-wrapper">
+                <div class="col swiper-slide" data-aos="fade-up" data-aos-duration="3000">
+
+                    <img src="assets/img/Asset-4-2.png" alt="#">
+                    <div class="details-col">
+                        <h1>Emmalee Mclain</h1>
+                        <p>Product Designer</p>
+                        <div class="icons">
+                            <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
+                            <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
+                            <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col swiper-slide" data-aos="fade-down" data-aos-duration="3000">
+                    <img src="assets/img/Asset-2-1.png" alt="#">
+                    <div class="details-col">
+                        <h1>Emmalee Mclain</h1>
+                        <p>Product Designer</p>
+                        <div class="icons">
+                            <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
+                            <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
+                            <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
+                        </div>
                     </div>
                 </div>
+
+                <div class="col swiper-slide" data-aos="fade-up" data-aos-duration="3000">
+                    <img src="assets/img/Asset-6-2.png" alt="#">
+                    <div class="details-col">
+                        <h1>Emmalee Mclain</h1>
+                        <p>Product Designer</p>
+                        <div class="icons">
+                            <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
+                            <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
+                            <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-final swiper-slide" data-aos="fade-down" data-aos-duration="3000">
+                    <img src="assets/img/Asset-5-2.png" alt="#">
+                    <div class="details-col">
+                        <h1>Emmalee Mclain</h1>
+                        <p>Product Designer</p>
+                        <div class="icons">
+                            <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
+                            <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
+                            <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="icon-s">
+                    <a href="#" aria-label="Read more"><i class='bx bxs-right-arrow'></i></a>
+                </div> -->
             </div>
 
-            <div class="col">
-                <img src="assets/img/Asset-2-1.png" alt="#">
-                <div class="details-col">
-                    <h1>Emmalee Mclain</h1>
-                    <p>Product Designer</p>
-                    <div class="icons">
-                        <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
-                        <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
-                        <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
-                    </div>
-                </div>
-            </div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
 
-            <div class="col">
-                <img src="assets/img/Asset-6-2.png" alt="#">
-                <div class="details-col">
-                    <h1>Emmalee Mclain</h1>
-                    <p>Product Designer</p>
-                    <div class="icons">
-                        <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
-                        <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
-                        <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-final">
-                <img src="assets/img/Asset-5-2.png" alt="#">
-                <div class="details-col">
-                    <h1>Emmalee Mclain</h1>
-                    <p>Product Designer</p>
-                    <div class="icons">
-                        <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
-                        <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
-                        <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="icon-s">
-                <a href="#" aria-label="Read more"><i class='bx bxs-right-arrow'></i></a>
-            </div>
         </div>
     </section>
 
@@ -192,6 +201,8 @@
         </div>
     </footer>
 
+
+    <script src="assets/js/script.js"></script>
 
 
 </body>
