Integration de JS

--- a/home.html
+++ b/home.html
@@ -128,76 +128,6 @@
             </div>
         </section>
         <section class="team">
-            <div class="title-sec">
-                <h1>Meet our superheros</h1>
-                <p>Build an incredible workplace and grow your business with Gusto’s <br>all-in-one platform with
-                    amazing contents.</p>
-            </div>
-            <div class="swiper">
-                <div class="container swiper-wrapper">
-                    <div class="col swiper-slide" data-aos="fade-up" data-aos-duration="3000">
-
-                        <img src="assets/img/Asset-4-2.png" alt="#">
-                        <div class="details-col">
-                            <h1>Emmalee Mclain</h1>
-                            <p>Product Designer</p>
-                            <div class="icons">
-                                <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
-                                <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
-                                <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="col swiper-slide" data-aos="fade-down" data-aos-duration="3000">
-                        <img src="assets/img/Asset-2-1.png" alt="#">
-                        <div class="details-col">
-                            <h1>Emmalee Mclain</h1>
-                            <p>Product Designer</p>
-                            <div class="icons">
-                                <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
-                                <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
-                                <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col swiper-slide" data-aos="fade-up" data-aos-duration="3000">
-                        <img src="assets/img/Asset-6-2.png" alt="#">
-                        <div class="details-col">
-                            <h1>Emmalee Mclain</h1>
-                            <p>Product Designer</p>
-                            <div class="icons">
-                                <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
-                                <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
-                                <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-final swiper-slide" data-aos="fade-down" data-aos-duration="3000">
-                        <img src="assets/img/Asset-5-2.png" alt="#">
-                        <div class="details-col">
-                            <h1>Emmalee Mclain</h1>
-                            <p>Product Designer</p>
-                            <div class="icons">
-                                <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
-                                <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
-                                <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- <div class="icon-s">
-                        <a href="#" aria-label="Read more"><i class='bx bxs-right-arrow'></i></a>
-                    </div> -->
-                </div>
-
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-
-            </div>
-
             <div class="blog">
                 <div class="title-sec" data-aos="fade-right" data-aos-duration="3000">
                     <h1>Popular blog post we update everyday</h1>
@@ -350,55 +280,54 @@
         </div>
 
         <div class="swiper">
-            <div class="container swiper-wrapper">
-                <div class="col swiper-slide" data-aos="fade-up" data-aos-duration="3000">
-
-                    <img src="assets/img/Asset-4-2.png" alt="#">
-                    <div class="details-col">
-                        <h1>Emmalee Mclain</h1>
-                        <p>Product Designer</p>
+            <div class="mob-team swiper-wrapper">
+                <div class="col-team swiper-slide">
+                    <div class="img-team">
+                        <img src="assets/img/Asset-2-1.png" alt="image">
                     </div>
-
-                </div>
-
-                <div class="col swiper-slide" data-aos="fade-down" data-aos-duration="3000">
-                    <img src="assets/img/Asset-2-1.png" alt="#">
-                    <div class="details-col">
+                    <div class="name-team">
                         <h1>Emmalee Mclain</h1>
                         <p>Product Designer</p>
                     </div>
                 </div>
-
-                <div class="col swiper-slide" data-aos="fade-up" data-aos-duration="3000">
-                    <img src="assets/img/Asset-6-2.png" alt="#">
-                    <div class="details-col">
+                <div class="col-team swiper-slide">
+                    <div class="img-team">
+                        <img src="assets/img/Asset-4-2.png" alt="image">
+                    </div>
+                    <div class="name-team">
                         <h1>Emmalee Mclain</h1>
                         <p>Product Designer</p>
                     </div>
                 </div>
-
-                <div class="col-final swiper-slide" data-aos="fade-down" data-aos-duration="3000">
-                    <img src="assets/img/Asset-5-2.png" alt="#">
-                    <div class="details-col">
+                <div class="col-team swiper-slide">
+                    <div class="img-team">
+                        <img src="assets/img/Asset-5-2.png" alt="image">
+                    </div>
+                    <div class="name-team">
                         <h1>Emmalee Mclain</h1>
                         <p>Product Designer</p>
                     </div>
                 </div>
-                <!-- <div class="icon-s">
-                    <a href="#" aria-label="Read more"><i class='bx bxs-right-arrow'></i></a>
-                </div> -->
+                <div class="col-team swiper-slide">
+                    <div class="img-team">
+                        <img src="assets/img/Asset-6-2.png" alt="image">
+                    </div>
+                    <div class="name-team">
+                        <h1>Emmalee Mclain</h1>
+                        <p>Product Designer</p>
+                    </div>
+                </div>
             </div>
-
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
-
         </div>
+        
     </div>
     <script>
         AOS.init();
     </script>
+ 
     <script src="assets/js/home.js"></script>
-    <script src="assets/js/script.js"></script>
     <script src="assets/js/login.js"></script>
 </body>
 
