Add Popup to Website

--- a/home.html
+++ b/home.html
@@ -33,13 +33,13 @@
         <div class="bx bx-menu" id="menu"></div>
         <a href="index.html" class="logo" aria-label="Read more"><img src="assets/img/Group.png" alt="#">Innovations</a>
         <ul class="navlist">
-            <li><a href="index.html" aria-label="Read more" title="go to home" class="active"><i
+            <li><a href="#" aria-label="Read more" title="go to home" class="active"><i
                         class='bx bx-home-alt-2'></i><span>Home</span></a></li>
-            <li><a href="advertise.html" aria-label="Read more" title="go to home"><i
+            <li><a href="advertise.html" aria-label="Read more" title="go to advertise"><i
                         class='bx bx-message-alt-add'></i><span>Advertise</span></a></li>
-            <li><a href="support.html" aria-label="Read more" title="go to home"><i
+            <li><a href="support.html" aria-label="Read more" title="go to support"><i
                         class='bx bx-support'></i><span>Support</span></a></li>
-            <li><a href="about.html" aria-label="Read more" title="go to home"><i
+            <li><a href="about.html" aria-label="Read more" title="go to about"><i
                         class='bx bx-info-circle'></i><span>About</span></a></li>
         </ul>
         <div class="other">
@@ -128,6 +128,76 @@
             </div>
         </section>
         <section class="team">
+            <div class="title-sec">
+                <h1>Meet our superheros</h1>
+                <p>Build an incredible workplace and grow your business with Gusto’s <br>all-in-one platform with
+                    amazing contents.</p>
+            </div>
+            <div class="swiper">
+                <div class="container swiper-wrapper">
+                    <div class="col swiper-slide" data-aos="fade-up" data-aos-duration="3000">
+
+                        <img src="assets/img/Asset-4-2.png" alt="#">
+                        <div class="details-col">
+                            <h1>Emmalee Mclain</h1>
+                            <p>Product Designer</p>
+                            <div class="icons">
+                                <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
+                                <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
+                                <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col swiper-slide" data-aos="fade-down" data-aos-duration="3000">
+                        <img src="assets/img/Asset-2-1.png" alt="#">
+                        <div class="details-col">
+                            <h1>Emmalee Mclain</h1>
+                            <p>Product Designer</p>
+                            <div class="icons">
+                                <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
+                                <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
+                                <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col swiper-slide" data-aos="fade-up" data-aos-duration="3000">
+                        <img src="assets/img/Asset-6-2.png" alt="#">
+                        <div class="details-col">
+                            <h1>Emmalee Mclain</h1>
+                            <p>Product Designer</p>
+                            <div class="icons">
+                                <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
+                                <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
+                                <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-final swiper-slide" data-aos="fade-down" data-aos-duration="3000">
+                        <img src="assets/img/Asset-5-2.png" alt="#">
+                        <div class="details-col">
+                            <h1>Emmalee Mclain</h1>
+                            <p>Product Designer</p>
+                            <div class="icons">
+                                <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
+                                <a href="#" aria-label="Read more"><i class='bx bxl-github'></i></a>
+                                <a href="#" aria-label="Read more"><i class='bx bxl-twitter'></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="icon-s">
+                        <a href="#" aria-label="Read more"><i class='bx bxs-right-arrow'></i></a>
+                    </div> -->
+                </div>
+
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+
+            </div>
+
             <div class="blog">
                 <div class="title-sec" data-aos="fade-right" data-aos-duration="3000">
                     <h1>Popular blog post we update everyday</h1>
@@ -248,7 +318,7 @@
             </div>
         </div>
         <div class="rows-mob">
-            <div class="rows-1-mob" data-aos="fade-left" data-aos-duration="3000">
+            <div class="rows-1-mob" data-aos="fade-left" data-aos-duration="1000">
                 <img src="assets/img/image58.png" alt="#">
                 <div class="details-mob">
                     <h1>Marketing & advertising</h1>
@@ -256,7 +326,7 @@
                 </div>
             </div>
 
-            <div class="rows-1-mob" data-aos="fade-right" data-aos-duration="3000">
+            <div class="rows-1-mob" data-aos="fade-right" data-aos-duration="1000">
                 <img src="assets/img/image62.png" alt="#">
                 <div class="details-mob">
                     <h1>Ultimate development</h1>
@@ -264,7 +334,7 @@
                 </div>
             </div>
 
-            <div class="rows-1-mob" data-aos="fade-left" data-aos-duration="3000">
+            <div class="rows-1-mob" data-aos="fade-left" data-aos-duration="1000">
                 <img src="assets/img/image64.png" alt="#">
                 <div class="details-mob">
                     <h1>Business Enterprise</h1>
@@ -278,55 +348,11 @@
                 <div class="line-t"></div>
             </div>
         </div>
-
-        <div class="swiper">
-            <div class="mob-team swiper-wrapper">
-                <div class="col-team swiper-slide">
-                    <div class="img-team">
-                        <img src="assets/img/Asset-2-1.png" alt="image">
-                    </div>
-                    <div class="name-team">
-                        <h1>Emmalee Mclain</h1>
-                        <p>Product Designer</p>
-                    </div>
-                </div>
-                <div class="col-team swiper-slide">
-                    <div class="img-team">
-                        <img src="assets/img/Asset-4-2.png" alt="image">
-                    </div>
-                    <div class="name-team">
-                        <h1>Emmalee Mclain</h1>
-                        <p>Product Designer</p>
-                    </div>
-                </div>
-                <div class="col-team swiper-slide">
-                    <div class="img-team">
-                        <img src="assets/img/Asset-5-2.png" alt="image">
-                    </div>
-                    <div class="name-team">
-                        <h1>Emmalee Mclain</h1>
-                        <p>Product Designer</p>
-                    </div>
-                </div>
-                <div class="col-team swiper-slide">
-                    <div class="img-team">
-                        <img src="assets/img/Asset-6-2.png" alt="image">
-                    </div>
-                    <div class="name-team">
-                        <h1>Emmalee Mclain</h1>
-                        <p>Product Designer</p>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
         
     </div>
     <script>
         AOS.init();
     </script>
- 
     <script src="assets/js/home.js"></script>
     <script src="assets/js/login.js"></script>
 </body>
