--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
                 <div class="log">
                     <h1>Let's Get You in!</h1>
                     <p>Login To your Account</p>
-                    <form id="account-form" action="index.html" method="GET">
+                    <form id="account-form" action="home.html" method="GET">
 
                         <div class="form">
                             <input type="email" placeholder="E-mail" name="Email" id="email">
