--- a/signup.html
+++ b/signup.html
@@ -51,7 +51,7 @@
             <div class="log">
                 <h1>Let's Get You in!</h1>
                 <h3>Login To your Account</h3>
-                <form id="account-form" action="index.html" method="GET">
+                <form id="account-form" action="home.html" method="GET">
                     <div class="form">
                         <input type="text" placeholder="UserName" name="UserName" id="name">
                         <i class='bx bxs-check-circle'></i>
