--- a/support.html
+++ b/support.html
@@ -44,6 +44,7 @@
         </div>
     </header>
 
+   <div class="main">
     <section class="support">
         <div class="title-sec">
             <h1>Our Support</h1>
@@ -200,6 +201,7 @@
             </div>
         </div>
     </footer>
+   </div>
 
 
     <script src="assets/js/script.js"></script>
